--- a/canvas.yaml
+++ b/canvas.yaml
@@ -9,6 +9,7 @@ paths:
 
 factory:
   path: database/factories
+  namespace: Database\Factories\Dealskoo\Affiliate\Models
 
 migration:
   path: database/migrations
